--- a/sites/layingoutlayouts/pages/styles2/styles2.css
+++ b/sites/layingoutlayouts/pages/styles2/styles2.css
@@ -11,6 +11,10 @@ a:hover {
 #boxmodellink {
   padding: 10px;
 }
+#headerlinks {
+  padding-left: 40px;
+  padding-top: 20px;
+}
 #header {
   align-items: center;
   justify-content: center;
@@ -27,44 +31,44 @@ a:hover {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 40px;
 }
-#firstbox {
+#firstbox:hover {
     background-color: lightgrey;
-    padding: 70px;
-    margin: 10px;
-    align-items: center;
-    justify-content: center;
+    padding: 20px;
+    margin: 5px;
+    align-items: top;
+    justify-content: top;
     display: flex;
     width:100%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-#secondbox {
+#secondbox:hover {
   background-color: green;
-    padding: 70px;
-    margin: 10px;
-    align-items: center;
-    justify-content: center;
+    padding: 20px;
+    margin: 5px;
+    align-items: top;
+    justify-content: top;
     display: flex;
     width:100%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 }
-#thirdbox {
+#thirdbox:hover {
   background-color: rgb(146, 151, 157);
-    padding: 70px;
-    margin: 10px;
-    align-items: center;
-    justify-content: center;
+    padding: 20px;
+    margin: 5px;
+    align-items: top;
+    justify-content: top;
     display: flex;
     width:100%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 }
-#fourthbox {
+#fourthbox:hover {
   background-color: rgb(200, 200, 201);
-    padding: 70px;
-    margin: 10px;
-    align-items: center;
-    justify-content: center;
+    padding: 20px;
+    margin: 5px;
+    align-items: top;
+    justify-content: top;
     display: flex;
     width:100%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -79,7 +83,6 @@ a:hover {
 }
 #header {
   height: auto;
-  width: auto;
 }
 #firstbox {
   height: auto;
