--- a/styles1/style1.css
+++ b/styles1/style1.css
@@ -37,8 +37,7 @@ nav {
     display: flex;
     justify-content: flex-end;
     padding: 70px 100px;
-    color:rgb(255, 255, 255)
-    ;
+    color:rgb(255, 255, 255);
     font-family: 'Roboto', sans-serif;
 
 }
