--- a/sites/FinalProject/finalprojectcss/finalprojectstyling.css
+++ b/sites/FinalProject/finalprojectcss/finalprojectstyling.css
@@ -92,6 +92,15 @@ header {
     z-index: 1;
 
 }
+#navbutton {
+  width: 100%;
+  margin: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: rgb(220, 214, 250);
+  border-radius: 12px;
+  font-family: 'EB Garamond', serif;
+}
 
 .flex-container {
     padding: 1em;
@@ -120,6 +129,7 @@ nav {
 }
 a:link{
     color:black;
+    text-decoration: none;
 
 }
 a:visited {
@@ -198,6 +208,7 @@ a:hover {
 #paragraph {
     font-size: 20px;
     line-height: 2;
+    font-style: 'EB Garamond', serif;
 }
 .grid-container2 {
     display: grid;
@@ -710,5 +721,11 @@ div {
         height: auto;
         width: auto;
         background-size: auto;
+    }
+    #navbutton {
+      margin: 0px;
+      font-size: 10px;
+      background-color: rgb(220, 214, 250);
+      border-radius: 12px;
     }
 }
